# craft-mind-agent

./: .env.example  .gitignore  README.md  analysis_utils.py  app.py  main.py  pyproject.toml
agents/: format_utils.py  instruction.py  interviewer.py  mentor.py  planner.py  researcher.py  shopper.py
utils/: analysis.py  custom_css.py  search.py  state.py
